Closed Bug 1066182 Opened 10 years ago Closed 10 years ago

Back out bug 768802 fix

Categories

(Core Graveyard :: Plug-ins, defect, P2)

x86_64
Windows 7
defect

Tracking

(firefox33 unaffected, firefox34 fixed, firefox35 fixed)

RESOLVED FIXED
mozilla35
Tracking Status
firefox33 --- unaffected
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: bugzilla, Assigned: bugzilla)

References

Details

Attachments

(1 file)

Flash 15 has cleaned up the focus stealing issues that the patch from bug 768802 was intended to remedy. Let's back that patch out so that we don't suffer any unintended consequences.
Attached patch Backout patchSplinter Review
Attachment #8488063 - Flags: review?(benjamin)
STOP!

Although I directly wrote to various people (including QA) on bug 768802 (because comments are not allowed) nobody cared.

In fact I'm afraid FlashPlayer 15 *does not* solve all issues. It might solve the issue with loosing focus, but under several circumstances (for which I will shortly open a new bug) focus is still lost temporarily or even restored to the wrong Firefox window!

I therefore hardly reccoment to *not* back out this patch, since it actually fixes all of the issues, instead of only concealing the most obvious ones as the Adobe hack in FlashPlayer 15 does.
OK, shame on me...

Fiorget everything I just said: I just got home from work so I could test the issue again and it turns out the update of flash failed the other day.

Apologies are in place for everyone I bugged because of this.
[Tracking Requested - why for this release]: The LockSetForegroundWindow() hack is not shipped yet. We should not ship it from the start.
Priority: -- → P2
Depends on: 768802
Comment on attachment 8488063 [details] [diff] [review]
Backout patch

You don't typically need review for a backout.
Attachment #8488063 - Flags: review?(benjamin) → review+
Comment on attachment 8488063 [details] [diff] [review]
Backout patch

Approval Request Comment
[Feature/regressing bug #]: bug 768802: The bug in Flash was fixed so I'd like to back out the brute-force approach being taken on our side.
[User impact if declined]: Potential for plugins behaving strangely due to previous patch's effects.
[Describe test coverage new/current, TBPL]: Results of patch already on beta and release.
[Risks and why]: None - a straight backout, reverts to previous behavior already on beta and release.
[String/UUID change made/needed]: None.
Attachment #8488063 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/81c7230eec1b
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Comment on attachment 8488063 [details] [diff] [review]
Backout patch

Aurora+
Attachment #8488063 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Clearing the tracking request as we don't need to track this for release. 

(In reply to Aaron Klotz [:aklotz] from comment #7)
> [Describe test coverage new/current, TBPL]: Results of patch already on beta
> and release.

The backout has already landed on beta? Did that happen in a different bug?
(In reply to Lawrence Mandel [:lmandel] from comment #10)
> Clearing the tracking request as we don't need to track this for release. 
> 
> (In reply to Aaron Klotz [:aklotz] from comment #7)
> > [Describe test coverage new/current, TBPL]: Results of patch already on beta
> > and release.
> 
> The backout has already landed on beta? Did that happen in a different bug?

The original change that this backout applies to never landed on 33 in the first place.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: