Bug 1066182 - Backout patch from bug 768802 due to bug fix in Flash 15. r=bsmedberg, a=lmandel